<resources>
    <string name="No">Нет</string>
    <string name="PRO">PRO</string>
    <string name="Yes">Да</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_advertiser">О рекламодателе</string>
    <string name="about_app">О приложении</string>
    <string name="about_listing_fees">ПОДРОБНЕЕ О ПЛАТНОМ РАЗМЕЩЕНИИ</string>
    <string name="abuse_comment">Опишите ситуацию</string>
    <string name="abuse_details_title">Жалоба</string>
    <string name="abuse_emotion">Что вы чувствуете</string>
    <string name="abuse_ready_to_be_sent">Ваша жалоба готова к отправке</string>
    <string name="accept">Принять</string>
    <string name="action_next">Продолжить</string>
    <string name="action_overflow_menu_content_description">More options</string>
    <string name="action_retake">Переснять</string>
    <string name="action_retry">Повторить</string>
    <string name="action_send">Отправить</string>
    <string name="ad_close_placeholder">Реклама скрыта</string>
    <string name="ad_more">Подробнее</string>
    <string name="add">Добавить</string>
    <string name="add_account">Добавить аккаунт</string>
    <string name="add_advert">Разместить объявление</string>
    <string name="add_image_error">Произошла ошибка при попытке добавить изображение</string>
    <string name="add_info">Добавить</string>
    <string name="add_more">Добавить ещё</string>
    <string name="add_note_menu_item_title">Добавить заметку</string>
    <string name="add_phone_error_default">Произошла ошибка. Попробуйте снова</string>
    <string name="add_phone_main_button_text">Подтвердить номер</string>
    <string name="add_phone_title">Добавление номера</string>
    <string name="add_photo">Добавить фото</string>
    <string name="add_photo_empty_button_text">Добавить фотографии</string>
    <string name="add_to_cart_error_message">Не удалось добавить товар в корзину</string>
    <string name="add_video">Добавить видео</string>
    <string name="address_is_copied">Адрес скопирован</string>
    <string name="advanced_info">Дополнительная информация</string>
    <string name="advert_activation_failure">Не удалось опубликовать</string>
    <string name="advert_added_to_fav">Сохранено в Избранном</string>
    <string name="advert_autoteka_button">Получить отчёт</string>
    <string name="advert_autoteka_show_report">Посмотреть отчет</string>
    <string name="advert_autoteka_subtitle">Подробная история автомобиля по VIN: %1$s</string>
    <string name="advert_autoteka_title">Отчёт Автотеки</string>
    <string name="advert_call_methods_dialog_call_in_app">Через Авито</string>
    <string name="advert_call_methods_dialog_call_phone">По телефону</string>
    <string name="advert_call_methods_dialog_call_phone_number">По телефону %1$s</string>
    <string name="advert_call_methods_dialog_title">Позвонить</string>
    <string name="advert_call_methods_dialog_title_multi_choice">Выберите, как позвонить</string>
    <string name="advert_call_permission_dialog_body">Разрешите доступ к микрофону — так вы не упустите покупателей, которые предпочитают звонить через приложение Авито.</string>
    <string name="advert_call_permission_dialog_btn_deny">Нет, спасибо</string>
    <string name="advert_call_permission_dialog_btn_grant">Разрешить</string>
    <string name="advert_call_permission_dialog_btn_to_settings">Перейти в настройки</string>
    <string name="advert_call_permission_dialog_title">Получайте больше звонков</string>
    <string name="advert_cant_open_chat">Сообщения недоступны</string>
    <string name="advert_chat_loading">Загрузка сервиса сообщений…</string>
    <string name="advert_contact_bar_online">в сети</string>
    <string name="advert_details_consultation_button_text">Оставить номер</string>
    <string name="advert_details_consultation_subtitle">Оставьте номер телефона, чтобы получить бесплатную консультацию от Авито.</string>
    <string name="advert_details_consultation_success_toast">Мы получили заявку. Консультант перезвонит вам в течение двух рабочих дней</string>
    <string name="advert_details_consultation_title">Подбор квартиры в новостройке</string>
    <string name="advert_details_credit_application">Заявка на кредит</string>
    <string name="advert_details_credit_currency_format">%s ₽</string>
    <string name="advert_details_credit_info_first_number">1.</string>
    <string name="advert_details_credit_info_first_text">Вы указываете первоначальный взнос, срок кредита и заполняете анкету.</string>
    <string name="advert_details_credit_info_second_number">2.</string>
    <string name="advert_details_credit_info_second_text">Мы находим подходящие предложения и показываем вероятность одобрения в банках-партнёрах. Вот некоторые из них:\n—  ВТБ;\n—  Альфа-Банк;\n—  Газпромбанк;\n—  Открытие.</string>
    <string name="advert_details_credit_info_third_number">3.</string>
    <string name="advert_details_credit_info_third_text">Вы отправляете заявки в банки, чьи условия вам приглянулись.</string>
    <string name="advert_details_credit_info_title">Как работает подбор кредита</string>
    <string name="advert_details_credit_initial_payment">Взнос</string>
    <string name="advert_details_credit_initial_payment_title">Первый взнос</string>
    <string name="advert_details_credit_link_get_conditions">Рассчитать условия</string>
    <string name="advert_details_credit_link_payment_from">В кредит от %s ₽/мес.</string>
    <string name="advert_details_credit_loan">Сумма кредита</string>
    <string name="advert_details_credit_loan_max">В кредит от %s ₽/мес.</string>
    <string name="advert_details_credit_monthly_payment">Платёж от</string>
    <string name="advert_details_credit_monthly_payment_format">%s ₽/мес.</string>
    <string name="advert_details_credit_percent">Ставка от</string>
    <string name="advert_details_credit_percent_format">%s%%</string>
    <string name="advert_details_credit_phone_chooser_other_phone">Указать другой</string>
    <string name="advert_details_credit_phone_chooser_subtitle">На него придёт смс с решением о выдаче кредита. Номер узнает только тот банк, в который вы отправите анкету.</string>
    <string name="advert_details_credit_phone_chooser_title">Выберите номер</string>
    <string name="advert_details_credit_term">Срок кредита</string>
    <string name="advert_details_description_title">Описание</string>
    <string name="advert_details_note_title">Заметка</string>
    <string name="advert_details_safe_show_default_btn_text">Договориться о просмотре</string>
    <string name="advert_details_show_on_map_item">Показать на карте</string>
    <string name="advert_fill_progress">Заполнено на %1$d%%</string>
    <string name="advert_incomplete_register_message">Для завершения действия, пожалуйста, заполните контактные данные</string>
    <string name="advert_limits_info_dialog_btn_ok">Хорошо</string>
    <string name="advert_limits_info_dialog_description">Пользователи увидят его сразу после проверки. Как правило, она занимает пару минут, но иногда нам нужно больше времени.</string>
    <string name="advert_limits_info_dialog_title">Объявление создано</string>
    <string name="advert_number_template">Объявление: №%1$s, размещено %2$s</string>
    <string name="advert_published_message">Объявление появится на Авито после проверки модераторами</string>
    <string name="advert_removed_from_fav">Удалено из Избранного</string>
    <string name="advert_removed_from_favorites">Объявление удалено из избранного</string>
    <string name="advert_seller_notified_about_call">Продавец получил сообщение о вашем звонке. Вы можете продолжить общение в чате</string>
    <string name="advert_will_be_deleted">Объявление будет удалено</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="category">Категория</string>
    <string name="code_hint">Код из смс</string>
    <string name="confirm_phone_title">Подтвердите номер</string>
    <string name="connection_problem">Нет соединения с интернетом</string>
    <string name="feedback_input_hint">Расскажите, в чем причина</string>
    <string name="feedback_send">Отправить</string>
    <string name="feedback_title_secondary">Ваш ответ поможет улучшить сервис</string>
    <string name="interview_invitation_date_time">Дата и время</string>
    <string name="interview_invitation_date_time_message">Предложите два варианта на выбор.</string>
    <string name="interview_invitation_location">Где пройдёт собеседование</string>
    <string name="interview_invitation_location_hint">Укажите место</string>
    <string name="interview_invitation_message">Сообщение</string>
    <string name="interview_invitation_message_hint">Кто встретит, как найти офис, что ещё захватить.</string>
    <string name="interview_invitation_phone">Телефон</string>
    <string name="interview_invitation_phone_hint">Телефон</string>
    <string name="new_code_text">Новый код</string>
    <string name="nothing_found">Ничего не найдено :(</string>
    <string name="nothing_found_description_alternative">К сожалению, по вашим параметрам ничего не найдено, попробуйте изменить их или рассмотрите другие предложения.</string>
    <string name="password_change_button_text">Изменить</string>
    <string name="password_change_description">Придумайте новый пароль, чтобы выйти из профиля на всех устройствах и уберечь его от злоумышленников.</string>
    <string name="password_change_forgot_password">Забыли пароль?</string>
    <string name="password_change_new_password_hint">Новый пароль</string>
    <string name="password_change_old_password_hint">Старый пароль</string>
    <string name="password_change_title">Смена пароля</string>
    <string name="region">Регион</string>
    <string name="sravni">sravni</string>
    <string name="try_again">Повторить</string>
    <string name="uploading_error_retry_button_text">Загрузить ещё раз</string>
    <string name="uploading_error_skip_button_text">Пропустить</string>
    <string name="uploading_error_title">Не удалось загрузить некоторые фотографии</string>
    <string name="whole_russia">Вся Россия</string>
</resources>