<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:id="@+id/content_container" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp">
    <com.avito.android.lib.design.component_container.ComponentContainer android:orientation="vertical" android:id="@+id/date_time_container" android:layout_width="match_parent" android:layout_height="wrap_content" app:componentContainer_message="@string/interview_invitation_date_time_message" app:componentContainer_title="@string/interview_invitation_date_time"/>
    <com.avito.android.lib.design.component_container.ComponentContainer android:orientation="vertical" android:id="@+id/location_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" app:componentContainer_resetCondition="1" app:componentContainer_title="@string/interview_invitation_location">
        <com.avito.android.lib.design.input.Input android:id="@+id/location_input" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/interview_invitation_location_hint" android:singleLine="true" app:input_formatterType="0" style="?attr/select"/>
    </com.avito.android.lib.design.component_container.ComponentContainer>
    <com.avito.android.lib.design.component_container.ComponentContainer android:orientation="vertical" android:id="@+id/phone_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" app:componentContainer_title="@string/interview_invitation_phone">
        <com.avito.android.lib.design.input.Input android:id="@+id/phone_input" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/interview_invitation_phone_hint" android:singleLine="true" app:input_formatterType="2"/>
    </com.avito.android.lib.design.component_container.ComponentContainer>
    <com.avito.android.lib.design.component_container.ComponentContainer android:orientation="vertical" android:id="@+id/message_container" android:background="@drawable/bg_transparent_white_gradient" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="80dp" app:componentContainer_title="@string/interview_invitation_message">
        <com.avito.android.lib.design.input.Input android:id="@+id/message_input" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/interview_invitation_message_hint" android:minLines="4"/>
    </com.avito.android.lib.design.component_container.ComponentContainer>
</LinearLayout>
