<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="wrap_content" android:overScrollMode="never">
    <RelativeLayout android:orientation="vertical" android:paddingTop="8dp" android:paddingBottom="30dp" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="16dp" android:paddingEnd="16dp">
        <TextView android:textAppearance="?attr/textHeadingLarge" android:id="@+id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/advert_details_credit_info_title"/>
        <TextView android:textAppearance="?attr/textBody" android:textColor="@color/text_button_default" android:id="@+id/first_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/advert_credit_info_sheet_number_top_margin" android:layout_marginRight="@dimen/advert_credit_info_sheet_right_margin" android:text="@string/advert_details_credit_info_first_number" android:layout_below="@+id/title"/>
        <TextView android:textAppearance="?attr/textBody" android:textColor="@color/text_button_default" android:id="@+id/first_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/advert_details_credit_info_first_text" android:layout_toRightOf="@+id/first_number" android:layout_alignTop="@+id/first_number"/>
        <TextView android:textAppearance="?attr/textBody" android:textColor="@color/text_button_default" android:id="@+id/second_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/advert_credit_info_sheet_number_top_margin" android:layout_marginRight="@dimen/advert_credit_info_sheet_right_margin" android:text="@string/advert_details_credit_info_second_number" android:layout_below="@+id/first_text"/>
        <TextView android:textAppearance="?attr/textBody" android:textColor="@color/text_button_default" android:id="@+id/second_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/advert_details_credit_info_second_text" android:layout_toRightOf="@+id/second_number" android:layout_alignTop="@+id/second_number"/>
        <TextView android:textAppearance="?attr/textBody" android:textColor="@color/text_button_default" android:id="@+id/third_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/advert_credit_info_sheet_number_top_margin" android:layout_marginRight="@dimen/advert_credit_info_sheet_right_margin" android:text="@string/advert_details_credit_info_third_number" android:layout_below="@+id/second_text"/>
        <TextView android:textAppearance="?attr/textBody" android:textColor="@color/text_button_default" android:id="@+id/third_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/advert_details_credit_info_third_text" android:layout_toRightOf="@+id/third_number" android:layout_alignTop="@+id/third_number"/>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
