<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="wrap_content" android:overScrollMode="never">
    <LinearLayout android:orientation="vertical" android:paddingTop="8dp" android:paddingBottom="30dp" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="16dp" android:paddingEnd="16dp">
        <TextView android:textAppearance="?attr/textHeadingLarge" android:id="@+id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/advert_details_credit_phone_chooser_title"/>
        <TextView android:textAppearance="?attr/textBody" android:textColor="@color/text_button_default" android:id="@+id/subtitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="18dp" android:text="@string/advert_details_credit_phone_chooser_subtitle"/>
        <com.avito.android.design.widget.ColoredProgressBar android:layout_gravity="center_horizontal" android:id="@+id/progress_bar" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/error_container" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?attr/textBody" android:textColor="@color/text_button_default" android:id="@+id/error_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/connection_problem"/>
            <Button android:id="@+id/retry_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/try_again" style="@style/res_2132018721_widget_avito_button_flat_1_4"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/phones_container" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
