<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/uploading_error_dialog_root" android:paddingTop="24dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.avito.android.ui.view.AvitoTextView android:textSize="@dimen/big_text_size" android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginRight="24dp" android:layout_marginBottom="12dp" android:text="@string/uploading_error_title" app:fontFamily="@font/avito_regular"/>
    <Button android:id="@+id/retry_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="@string/uploading_error_retry_button_text" style="@style/res_2132018725_widget_avito_button_raised"/>
    <Button android:gravity="center_horizontal" android:id="@+id/skip_button" android:layout_width="match_parent" android:layout_height="36dp" android:layout_marginLeft="24dp" android:layout_marginTop="8dp" android:layout_marginRight="24dp" android:layout_marginBottom="8dp" android:text="@string/uploading_error_skip_button_text" style="@style/res_2132018721_widget_avito_button_flat_1_4"/>
</LinearLayout>
