<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textAppearance="?attr/textBody" android:textColor="@color/text_button_default" android:id="@+id/no_call_feedback_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="6dp" android:text="@string/feedback_title_secondary" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <com.avito.android.lib.design.input.Input android:id="@+id/no_call_feedback_input" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:hint="@string/feedback_input_hint" android:maxLines="4" android:minLines="4" android:imeOptions="actionGo|actionSend|actionDone|flagNoExtractUi" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:input_clearButton="true" app:layout_autoReset="1" style="?attr/input"/>
    <com.avito.android.lib.design.button.Button android:id="@+id/no_call_feedback_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:text="@string/feedback_send" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:button_cornerRadius="5dp" style="?attr/buttonPrimaryLarge"/>
</LinearLayout>
