<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:id="@+id/password_change_root" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView android:id="@+id/scroll_view" android:paddingTop="?attr/actionBarSize" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/content_horizontal_padding" android:paddingEnd="@dimen/content_horizontal_padding">
            <TextView android:id="@+id/title" android:paddingTop="@dimen/publish_appbar_title_padding_top" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/password_change_title" style="?attr/textLegacy2_titleSmall"/>
            <TextView android:textColor="?attr/black" android:id="@+id/description" android:paddingTop="10dp" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/password_change_description" style="?attr/textLegacy2_body"/>
            <com.avito.android.lib.design.component_container.ComponentContainer android:id="@+id/container_old_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp">
                <com.avito.android.lib.design.input.Input android:id="@+id/input_old_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/password_change_old_password_hint" android:imeOptions="actionNext" app:input_iconRightColor="?attr/gray28" style="?attr/input"/>
            </com.avito.android.lib.design.component_container.ComponentContainer>
            <com.avito.android.lib.design.component_container.ComponentContainer android:id="@+id/container_new_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
                <com.avito.android.lib.design.input.Input android:id="@+id/input_new_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/password_change_new_password_hint" android:imeOptions="actionDone" app:input_iconRightColor="?attr/gray28" style="?attr/input"/>
            </com.avito.android.lib.design.component_container.ComponentContainer>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="?android:attr/actionBarSize">
        <TextView android:textColor="?attr/gray48" android:layout_gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/forgot_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password_change_forgot_password" android:layout_marginEnd="16dp" style="?attr/textLegacy2_body"/>
    </androidx.appcompat.widget.Toolbar>
    <FrameLayout android:layout_gravity="bottom" android:id="@+id/button_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_marginBottom="16dp" android:paddingStart="@dimen/content_horizontal_padding" android:paddingEnd="@dimen/content_horizontal_padding">
        <com.avito.android.lib.design.button.Button android:id="@+id/button_change" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/password_change_button_text" android:layout_marginStart="@dimen/standard_padding" android:layout_marginEnd="@dimen/standard_padding" style="?attr/buttonPrimaryLarge"/>
    </FrameLayout>
    <include android:id="@+id/progress_view" android:paddingTop="?attr/actionBarSize" layout="@layout/semitransparent_progress"/>
</FrameLayout>
