<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/offer_product_list_empty_sravni_0" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dim_6" app:cardCornerRadius="@dimen/dim_0" app:cardElevation="@dimen/dim_4">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="@dimen/dim_20" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_not_found_sravni" android:contentDescription="@string/sravni"/>
        <TextView android:textColor="@color/on_surface_high_emphasis" android:ellipsize="end" android:id="@+id/tvHeader" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dim_20" android:text="@string/nothing_found" android:singleLine="true" style="@style/Headline1Medium"/>
        <TextView android:textColor="@color/on_surface_medium_emphasis" android:gravity="center" android:id="@+id/tvDescription" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dim_8" android:text="@string/nothing_found_description_alternative" style="@style/Subtitle1Regular"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
