<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/code_confirm_screen_root" android:layout_width="match_parent" android:layout_height="match_parent">
    <ru.avito.component.toolbar.AppBarLayoutWithIconAction android:id="@+id/app_bar" android:layout_width="match_parent" android:layout_height="wrap_content" android:stateListAnimator="@drawable/appbar_allways_unelevated" app:short_title="@string/confirm_phone_title" app:title="@string/confirm_phone_title" app:titleSidePadding="@dimen/standard_padding" app:titlesBottomPadding="@dimen/phones_appbar_bottom_padding"/>
    <View android:id="@+id/anchor_view" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginTop="?android:attr/actionBarSize"/>
    <ScrollView android:orientation="vertical" android:id="@+id/scrollableContainer" android:focusable="true" android:focusableInTouchMode="true" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <com.avito.android.lib.design.component_container.ComponentContainer android:orientation="horizontal" android:id="@+id/phone_confirm_container" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="2.4" app:componentContainer_contentMarginTop="24dp" app:componentContainer_resetCondition="1" app:componentContainer_subtitleAppearance="?attr/textLegacy3_body" app:componentContainer_subtitleColor="@color/design_text_color_black_selector">
            <com.avito.android.lib.design.input.Input android:id="@+id/code_input" android:layout_width="0dp" android:layout_height="wrap_content" android:hint="@string/code_hint" android:singleLine="true" android:layout_weight="1.4" app:layout_autoReset="1" style="?attr/input"/>
            <com.avito.android.lib.design.button.Button android:id="@+id/ticker_button" android:layout_width="0dp" android:layout_height="wrap_content" android:minWidth="114dp" android:text="@string/new_code_text" android:layout_weight="1" style="?attr/buttonSecondaryLarge"/>
        </com.avito.android.lib.design.component_container.ComponentContainer>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
